# MyC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  generate.sh  init.sh  run.sh
app/: CMakeLists.txt  app.cpp  app.h  main.cpp
http_app/: CMakeLists.txt  db.sqlite
http_app/sql/: 001_init.sql
http_app/src/: App.cc  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cc  ErrorHandler.hpp  SwaagerConponent.hpp
http_app/src/controller/: StaticController.hpp  UserController.hpp
http_app/src/db/: UserDb.hpp
http_app/src/dto/: PageDto.hpp  StatusDto.hpp  UserDto.hpp
http_app/src/service/: UserService.cpp  UserService.hpp
include/: export.h  global.h  slice.h  status.h  threadPool.hpp  tire.h
lib/core/: CMakeLists.txt  core.cpp
lib/core/inc/: core.h
lib/utility/: CMakeLists.txt  status.cc  utility.cpp
lib/utility/inc/: utility.h
tests/: CMakeLists.txt  test.cpp
